🧑🏻‍💻 New code to have a better git log

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,3 +4,5 @@
 
 [init]
 	defaultBranch = Main
+[alias]
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
