--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,6 @@
 	email = 50472064+raulpenate@users.noreply.github.com
 
 [init]
-	defaultBranch = Main
+	defaultBranch = main
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
